--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,18 @@
 {
     "orgName": "devorgdx@utilligent.com",
     "edition": "Developer",
-    "orgPreferences" : {
-        "enabled": ["S1DesktopEnabled"]
+    "settings": {
+	    "communitiesSettings": {
+		    "enableNetworksEnabled": true
+	    },
+	    "mobileSettings": {
+                    "enableS1EncryptedStoragePref2": true
+	    },
+	    "omniChannelSettings": {
+                   "enableOmniChannel": true
+            },
+	    "caseSettings": {
+		    "systemUserEmail": "aswin.vijayan@utilligent.com"
+           }
     }
 }
