--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ before_install:
 - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key
   --username $USERNAME --setdefaultdevhubusername -a HubOrg
 script:
-- sfdx force:source:deploy -u devorgdx@utilligent.com
+- sfdx force:source:deploy -p force-app -u devorgdx@utilligent.com
 
